# webcarga

./: .gitignore  AGENTLOG.md  CLAUDE.md  init-gcp.sh  logextraction.txt  setup_extraction.sh
.github/workflows/: deploy.yml
extraction_service/: .dockerignore  .gitignore  Dockerfile  README.md  init-gcp.sh  pyproject.toml
extraction_service/app/: main.py
extraction_service/app/api/: routes.py  schemas.py
extraction_service/app/core/: config.py
extraction_service/app/jobs/: store.py
extraction_service/app/tms/: base.py  factory.py
extraction_service/app/tms/qanalytics/: scraper.py
extraction_service/app/tms/sodimac/: scraper.py
extraction_service/app/tms/wingsuite/: scraper.py
extraction_service/app/utils/: gcs_client.py
monitor-app/backend/supabase/migrations/: 20260417191106_init_medallion_and_bronze.sql
