[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extraction-service"
version = "1.0.0"
description = "API robusta para orquestar scraping y extracciones de TMS"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0.post1",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "playwright==1.40.0",
    "google-cloud-storage==2.13.0",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
# Excluir `tests/` del empaquetado — setuptools con auto-discovery falla si
# ve más de un top-level (`app` + `tests`). El directorio de tests existe
# pero no es parte del paquete instalable.
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
    "integration: requiere credenciales TMS + red; correr con INTEGRATION=1"
]
